kubernetes/applications/manifests/nebula-sync/nebula-sync-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nebula-sync
  namespace: nebula-sync
  labels:
    app.kubernetes.io/name: nebula-sync
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nebula-sync
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nebula-sync
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      containers:
        - name: nebula-sync
          image: ghcr.io/lovelaze/nebula-sync:v0.11.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
