kubernetes/applications/manifests/nebula-sync/nebula-sync-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nebula-sync-ingress
  namespace: nebula-sync
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: nebula-sync-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nebula-sync.example.com
      secretName: nebula-sync-tls
  rules:
    - host: nebula-sync.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nebula-sync
                port:
                  number: 80
